--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.0",
+    "@rainbow-me/rainbowkit": "^2.2.3",
+    "@tanstack/react-query": "^5.66.7",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.1",
+    "viem": "^2.23.3",
+    "wagmi": "^2.14.11",
     "zod": "^3.24.2"
   },
   "devDependencies": {
