--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.7",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
