--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.2",
@@ -24,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.23.3",
     "wagmi": "^2.14.11",
     "zod": "^3.24.2"
