--- a/FrontEnd/.gitignore
+++ b/FrontEnd/.gitignore
@@ -30,6 +30,16 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+
+# Compiler files
+cache/
+out/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
 # env files (can opt-in for committing if needed)
 .env*
 
